<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">My Coffee</string>
    <string name="hint_findCoffees" tools:ignore="TypographyEllipsis">Tìm kiếm cà phê của bạn...</string>
    <string name="search">Tìm kiếm</string>
    <string name="slogan">Tìm kiếm và lựa chọn cà phê bạn cần.</string>
    <string name="network_not_working">Không thể kết nối mạng</string>
    <string name="home">Trang chủ</string>
    <string name="favorite">Yêu thích</string>
    <string name="directory">Danh mục</string>
    <string name="shopping_cart">Giỏ hàng</string>
    <string name="bestsellers_book">SÁCH BÁN CHẠY</string>
    <string name="coffee_type">Loại cà phê</string>
    <string name="coming">Mới ra mắt</string>
    <string name="out_of_stock">Hết hàng</string>
    <string name="coffee_default_name">My Coffee</string>
    <string name="book_price">%s đ</string>
    <string name="book_discount">-%d%%</string>
    <string name="news_coffee">Cà phê mới</string>
    <string name="login_logout">Đăng nhập/Đăng kí</string>
    <string name="login_logout_with_phone_number">Đăng nhập hoặc đăng kí bằng số điện thoại</string>
    <string name="login_logout_with_email">Đăng nhập hoặc đăng kí bằng email</string>
    <string name="enter_your_number_phone">Nhập số điện thoại của bạn</string>
    <string name="enter_your_email">Nhập email của bạn</string>
    <string name="continue_login">Tiếp tục</string>
    <string name="login_using_email">Đăng nhập bằng email</string>
    <string name="login_using_phone_number">Đăng nhập bằng SĐT</string>
    <string name="change_password_success">Đã đổi mật khẩu thành công, bạn hãy tiếp tục đăng nhập</string>
    <string name="error_state">Đã có lỗi xảy ra, vui lòng thử lại sau</string>
    <string name="or">HOẶC</string>
    <string name="continue_with_google">Tiếp tục với Google</string>
    <string name="continue_with_facebook">Tiếp tục với Facebook</string>
    <string name="policies_and_terms"><![CDATA[Bằng việc đăng kí, bạn đồng ý với Điều khoản Dịch vụ & Chính sách bảo mật của My Coffee]]></string>
    <string name="please_enter_password_of_number_phone">Vui lòng nhập mật khẩu My Books của số điện thoại</string>
    <string name="please_enter_password_of_email">Vui lòng nhập mật khẩu My Books của email</string>
    <string name="enter_password">Nhập mật khẩu</string>
    <string name="forget">Quên?</string>
    <string name="login">Đăng nhập</string>
    <string name="please_enter_your_user">Vui lòng nhập tài khoản muốn lấy lại mật khẩu</string>
    <string name="enter_user">Nhập số điện thoại / Email</string>
    <string name="enter_phone">Nhập số điện thoại</string>
    <string name="get_password">Lấy lại mật khẩu</string>
    <string name="forgot_password">Quên mật khẩu</string>
    <string name="change_phone_number_contact">Đổi số điện thoại? Liên hệ Hotline 03xxxxxxxx</string>
    <string name="secure_verification">Xác thực an toàn</string>
    <string name="not_account_using_email">Email chưa có tài khoản My Books, vui lòng nhập số điện thoại của bạn để tiếp tục tạo tài khoản</string>
    <string name="enter_otp">Nhập mã xác minh (OTP)</string>
    <string name="please_enter_opt_code">Để xác minh số điện thoại là của bạn, vui lòng nhập mã gồm 6 chữ số vừa được gửi đến</string>
    <string name="resend_otp">Gửi lại mã sau:</string>
    <string name="resend">Gửi lại</string>
    <string name="existing_account_for_number_phone">Số điện thoại đã đăng kí tài khoản</string>
    <string name="login_with_phone_number">Bạn có muốn đăng nhập bằng số điện thoại?</string>
    <string name="accept">Đồng ý</string>
    <string name="network_not_available">Không có kết nối mạng</string>
    <string name="complete_registration">Hoàn tất tạo tài khoản</string>
    <string name="please_enter_your_name">Vui lòng cho biết tên của bạn</string>
    <string name="please_enter_your_password">Vui lòng nhập mật khẩu (từ 8 kí tự gồm cả chữ và số)</string>
    <string name="please_reenter_your_password">Vui lòng nhắc lại mật khẩu</string>
    <string name="password">Mật khẩu</string>
    <string name="full_name"><![CDATA[Họ & Tên]]></string>
    <string name="name">Tên</string>
    <string name="create_account">Tạo tài khoản</string>
    <string name="name_not_empty">Tên không được để trống!</string>
    <string name="password_not_empty">Mật khẩu không được để trống!</string>
    <string name="password_not_same">Mật khẩu phải giống nhau!</string>
    <string name="return_login_page"><![CDATA[Đã tạo tài khoản, quay lại trang đăng nhập sau:]]></string>
    <string name="not_have_account_for_phone_number">Không có tài khoản ứng với số điện thoại đã cung cấp</string>
    <string name="not_have_account_for_email">Không có tài khoản ứng với email đã cung cấp</string>
    <string name="please_re_enter">Vui lòng nhập lại</string>
    <string name="resending">Đã gửi lại mã OTP</string>
    <string name="share">Chia sẽ</string>
    <string name="my_account">Tài khoản của tôi</string>
    <string name="help">Trợ giúp?</string>
    <string name="incorrect_password">Mật khẩu không đúng</string>
    <string name="sold">%d đã bán</string>
    <string name="in_stock">Còn hàng</string>
    <string name="provider_information">Thông tin nhà cung cấp</string>
    <string name="HoChiMinhCity">TP Hồ Chí Minh</string>
    <string name="reply_within">Trả lời trong %d %s</string>
    <string name="shop_worked">%d %s</string>
    <string name="shop_reply">Shop phản hồi</string>
    <string name="rating_score">%.1f</string>
    <string name="people_rating">(%d)</string>
    <string name="rating">Đánh giá</string>
    <string name="year">năm</string>
    <string name="month">tháng</string>
    <string name="day">ngày</string>
    <string name="hour">giờ</string>
    <string name="minute">phút</string>
    <string name="worked">Đã hoạt động</string>
    <string name="buy_now">Mua ngay</string>
    <string name="add_shopping_cart">Thêm vào giỏ hàng</string>
    <string name="stand">Gian hàng</string>
    <string name="chat">Tin nhắn</string>
    <string name="information">Thông tin sản phẩm</string>
    <string name="author">Tác giả</string>
    <string name="size">Kích thước</string>
    <string name="pages">Số trang</string>
    <string name="weight">Khối lượng</string>
    <string-array name="ageRange">
        <item tools:ignore="TypographyDashes">Nhà trẻ – Mẫu giáo (0-6 tuổi)</item>
        <item tools:ignore="TypographyDashes">Thiếu nhi (6-11 tuổi)</item>
        <item tools:ignore="TypographyDashes">Thiếu niên (11-15 tuổi)</item>
        <item tools:ignore="TypographyDashes">Tuổi mới lớn (15-18 tuổi)</item>
        <item>Thanh niên (Trên 18 tuổi)</item>
    </string-array>
    <string name="type">Loại</string>
    <string name="describe">Mô tả</string>
    <string name="fraction">%d/%d</string>
    <string name="float_fraction">%.1f/%.1f</string>
    <string name="num_default">0</string>
    <string name="setting">Cài đặt</string>
    <string name="language">Ngôn ngữ</string>
    <string name="coming_soon">Sắp ra mắt</string>
    <string name="policy">Chính sách</string>
    <string name="well_come">Chào mừng bạn đến với My Books!</string>
    <string name="press_back_again_to_exit">Nhấn Back một lần nữa để thoát</string>
    <string name="hotline">0352335288</string>
    <string name="my_order">Đơn hàng của tôi</string>
    <string name="view_history_order">Xem lịch sử</string>
    <string name="wait_confirm">Chờ xác nhận</string>
    <string name="wait_for_shipping">Chờ vận chuyển</string>
    <string name="in_transit">Đang vận chuyển</string>
    <string name="delivered">Đã vận chuyển</string>
    <string name="package_return">Đổi trả</string>
    <string name="recently_viewed">Xem gần đây</string>
    <string name="my_review">Đánh giá của tôi</string>
    <string name="shop_followed">Shop theo dõi</string>
    <string name="my_information">Thông tin của tôi</string>
    <string name="continue_shopping">Tiếp tục mua sắm</string>
    <string name="do_not_have_order_cart">Bạn chưa có sản phẩm nào trong giỏ hàng</string>
    <string name="add_address">Thêm địa chỉ</string>
    <string name="all">Tất cả</string>
    <string name="total">Tổng cộng</string>
    <string name="please_chose_product">Vui lòng chọn sản phẩm</string>
    <string name="default_buy">Mua hàng (%d)</string>
    <string name="added_cart">Sản phẩm đã được thêm vào giỏ hàng</string>
    <string name="view_cart">Xem Giỏ Hàng</string>
    <string name="provided_by">Cung cấp bởi:</string>
    <string name="close">Đóng</string>
    <string name="me">Tôi</string>
    <string name="sub">-</string>
    <string name="num_one">1</string>
    <string name="add">+</string>
    <string name="phone_default">000000000</string>
    <string name="seconds_default">30s</string>
    <string name="ship_location">Địa chỉ giao hàng</string>
    <string name="add_new_address">Thêm địa chỉ mới</string>
    <string name="chose">Chọn</string>
    <string name="string_default">Mặc định</string>
    <string name="confirm">Xác nhận</string>
    <string name="enter_new_address">Nhập địa chỉ mới</string>
    <string name="edit_address">Chỉnh sửa địa chỉ</string>
    <string name="recipient_name">Tên người nhận</string>
    <string name="phone">Số điện thoại</string>
    <string name="provinces_and_cities">Tỉnh/Thành phố</string>
    <string name="enter_name">Nhập họ tên</string>
    <string name="enter_phone_number">Nhập số điện thoại</string>
    <string name="chose_provinces_cities">Chọn Tỉnh/Thành phố</string>
    <string name="chose_districts">Chọn Quận/Huyện</string>
    <string name="districts">Quận/Huyện</string>
    <string name="precinct">Phường/Xã</string>
    <string name="enter_info">Vui lòng nhập thông tin</string>
    <string name="please_enter_full">Vui lòng nhập cả 2</string>
    <string name="chose_precinct">Chọn Phường/Xã</string>
    <string name="delivery_address">Địa chỉ nhận hàng</string>
    <string name="delivery_detail">Tòa nhà, số nhà, tên đường</string>
    <string name="set_it_default">Sử dụng làm địa chỉ mặc định</string>
    <string name="exit_this_page">Bạn có chắc chắn rời khỏi trang này?</string>
    <string name="your_information_enter_not_save">Thông tin bạn vừa nhập sẽ không được lưu lại.</string>
    <string name="exit">Rời khỏi</string>
    <string name="stay">Ở lại</string>
    <string name="enter_recipient_name">Nhập tên người nhận</string>
    <string name="enter_delivery_address">Nhập địa chỉ nhận hàng</string>
    <string name="add_address_success">Thêm địa chỉ thành công</string>
    <string name="change_address_success">Thay đổi địa chỉ thành công</string>
    <string name="name_not_valid">Tên phải bắt đầu bằng chữ hoa và không được chứa chữ số và kí tự đặc biệt</string>
    <string name="delivery_must_at_least_two_words">Địa chỉ phải chứa ít nhất 2 từ</string>
    <string name="delivery_not_valid">Địa chỉ không nên chứa các kí tự đặc biệt</string>
    <string name="remove">Xóa</string>
    <string name="remove_address">Xóa địa chỉ</string>
    <string name="confirm_remove_this_address">Bạn muốn xóa địa chỉ này?</string>
    <string name="no">Không</string>
    <string name="remove_selected_item">Bạn có muốn xóa sản phẩm đang chọn</string>
    <string-array name="status">
        <item>Đang xác nhận</item>
        <item>Chờ vận chuyển</item>
        <item>Đang giao</item>
        <item>Đã giao</item>
        <item>Đợi xác nhận hủy</item>
        <item>Đã hủy</item>
    </string-array>
    <string name="save">Lưu</string>
    <string name="staff_manager">Quản lí nhân viên</string>
    <string name="name_is">Tên:</string>
    <string name="id">Id:</string>
    <string name="order_manager">Quản lí đơn hàng</string>
    <string name="product_manager">Quản lí sản phẩm</string>
    <string name="shop_manager">Sửa thông tin shop</string>
    <string name="current_setup">Thiết lập cũ</string>
    <string name="uncheck_all">Bỏ tất cả</string>
</resources>