<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="10dp">

    <View
        android:id="@+id/view_top_line"
        android:layout_width="match_parent"
        android:layout_height="0.7dp"
        android:background="@color/text_hint"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/layout_staff_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name_is"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tv_name_staff"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="@string/status"
                    android:textColor="@color/black"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/id" />

                <TextView
                    android:id="@+id/tv_id_staff"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="@string/status"
                    android:textColor="@color/black" />
            </LinearLayout>
        </LinearLayout>

        <View
            android:id="@+id/view_up_down"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="center_vertical"
            android:background="@drawable/ic_down" />
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_edit_permission"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_staff_info">

        <GridLayout
            android:id="@+id/gridLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="2"
            android:rowCount="3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_columnWeight="1">

                <CheckBox
                    android:id="@+id/cb_order_manager"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/order_manager"
                    android:textSize="13sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_columnWeight="1">

                <CheckBox
                    android:id="@+id/cb_product_manager"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/product_manager"
                    android:textSize="13sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_columnWeight="1">

                <CheckBox
                    android:id="@+id/cb_shop_manager"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/shop_manager"
                    android:textSize="13sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_columnWeight="1">

                <CheckBox
                    android:id="@+id/cb_staff_manager"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/staff_manager"
                    android:textSize="13sp" />
            </LinearLayout>
        </GridLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="5dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/gridLayout">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:layout_gravity="center_vertical">

                <TextView
                    android:id="@+id/tv_uncheck_all"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/uncheck_all"
                    android:textColor="@color/original_price" />

                <View
                    android:layout_width="0.7dp"
                    android:layout_height="10dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="10dp"
                    android:background="@color/text_hint" />

                <TextView
                    android:id="@+id/tv_current_setup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/current_setup"
                    android:textColor="@color/original_price" />
            </LinearLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_save_permission"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="2"
                android:background="@drawable/custom_button_continue_hidden"
                android:text="@string/save"
                android:textAllCaps="false"
                android:textColor="@color/text_hint" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_remove_staff"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="2"
                android:layout_marginStart="10dp"
                android:background="@drawable/custom_button_close"
                android:text="@string/remove"
                android:textAllCaps="false"
                android:textColor="@color/reduced_price" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>