<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="350dp"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/custom_dialog_exists_account">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/remove_selected_item"
        android:textSize="17sp"
        android:textColor="@color/black"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="20dp"
        android:gravity="center" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_close_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginHorizontal="20dp"
            android:layout_marginBottom="20dp"
            android:text="@string/no"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="17sp"
            android:background="@drawable/custom_button_continue_appear"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_remove"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginHorizontal="20dp"
            android:layout_marginBottom="20dp"
            android:text="@string/remove"
            android:textColor="@color/reduced_price"
            android:textAllCaps="false"
            android:textSize="17sp"
            android:background="@drawable/custom_button_close"/>
    </LinearLayout>
</LinearLayout>