<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="10dp"
            android:background="@drawable/custom_dialog_exists_account"
            android:layout_marginHorizontal="20dp"
            android:paddingHorizontal="20dp">

            <TextView
                android:id="@+id/textView15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/exit_this_page"
                android:textSize="17sp"
                android:textStyle="bold"
                android:layout_marginTop="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/your_information_enter_not_save"
                android:textSize="15sp"
                android:gravity="center"
                android:layout_marginTop="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView15" />

            <TextView
                android:id="@+id/btn_exit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/exit"
                android:textColor="@color/reduced_price"
                android:padding="10dp"
                android:background="@drawable/bg_transparent_ripple"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView16" />

            <TextView
                android:id="@+id/btn_stay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="10dp"
                android:padding="10dp"
                android:background="@drawable/bg_transparent_ripple"
                android:text="@string/stay"
                android:textColor="@color/reduced_price"
                app:layout_constraintEnd_toStartOf="@+id/btn_exit"
                app:layout_constraintTop_toBottomOf="@+id/textView16" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>
</layout>